---
source: orm-tests/tests/query_ifelse.rs
expression: queries_2.to_raw().build()
---
{
LET $val = 4;

LET $oye_name = 'Oyelowo';

RETURN {
RETURN IF $val > 5 {
SELECT * FROM space_ship ORDER BY name DESC;
RETURN 6;
} ELSE IF $oye_name = 'Oyelowo' { RETURN (SELECT * FROM weapon ORDER BY strength DESC); } ELSE {
LET $x = 2505;
RETURN 5;
};
};
}
